order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: 884583303090.dkr.ecr.eu-west-3.amazonaws.com/food-delivery/order-service:latest
        ports:
        - containerPort: 8080
