order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  # REMOVE all AWS LoadBalancer annotations
spec:
  type: ClusterIP  # ← CHANGE from LoadBalancer to ClusterIP
  selector:
    app: order-service
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
