order-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-port: "8081"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /order
        pathType: Exact
        backend:
          service:
            name: order-service
            port:
              number: 80
      - path: /order/status
        pathType: Exact
        backend:
          service:
            name: order-service
            port:
              number: 80
      - path: /actuator/health
        pathType: Exact
        backend:
          service:
            name: order-service
            port:
              number: 80
